--- a/resources/spa/src/locales/zh-CN.yml
+++ b/resources/spa/src/locales/zh-CN.yml
@@ -599,16 +599,20 @@ message:
 
     reward_user: '{user}打赏了你'
     reward_feed: '{user}打赏了你的动态'
-    reward_news: '你的资讯《{news}》被{user}打上了{amount}'
+    reward_news: '你的资讯《{news}》被{user}打赏了{amount}'
+    reward_post: '你的帖子「{post}」被{user}打赏了'
     group_join: ['同意用户{user}加入圈子「{group}」', '拒绝用户加入圈子「{group}」']
     certificate: ['你申请的身份认证已通过', '你申请的身份认证已被驳回，驳回理由：{reason}']
     qa_adopt: 你提交的回答「{answer}」被采纳
     reward_qa: '{user}打赏了你的回答'
     qa_invitation: '{user}邀请你回答问题「{question}」'
+    qa_topic_passed: '你的《{topic}》专题申请已通过'
+    qa_topic_reject: '你的《{topic}》专题申请被拒绝'
     pinned_feed_comment: ['同意用户动态评论「{comment}」的置顶请求', '拒绝用户动态评论「{comment}」的置顶请求']
     pinned_news_comment: ['同意用户关于资讯《{news}》评论「{comment}」的置顶请求', '同意用户关于资讯《{news}》评论「{comment}」的置顶请求']
     pinned_post_comment: ['同意帖子「{post}」的评论置顶请求', '拒绝帖子「{post}」的评论置顶请求']
     pinned_post: ['同意用户帖子「{post}」的置顶请求', '拒绝用户帖子「{post}」的置顶请求']
+    pinned_post_by_admin: '你的帖子「{post}」已被管理员置顶'
 
   comment:
     name: 收到的评论
