fix(SPA): 用户注册协议名称变更为.env中的变量

--- a/resources/spa/src/locales/en.yml
+++ b/resources/spa/src/locales/en.yml
@@ -691,8 +691,7 @@ auth:
     name: Register
     success: Register success
     protocol: Register protocol
-    agree: By clicking Register, I agree to {protocol}
-    ts_protocol: '"ThinkSNS + User Use Agreement"'
+    agree: By clicking Register, I agree to "{protocol}"
     label:
       phone: Register with phone
       email: Register with email
