fix(SPA): 补充消息类型

--- a/resources/spa/src/locales/en.yml
+++ b/resources/spa/src/locales/en.yml
@@ -384,7 +384,7 @@ feed:
   paid: Paid feeds
   top: Top feeds
   pay:
-    need_paid: 'You only need to pay {0} @:(currency.unit) to view this {1}'
+    need_pay: 'You only need to pay {0} @:(currency.unit) to view this {1}'
 
   topic:
     name: Topic
@@ -547,6 +547,18 @@ question:
   qa: Questions and answers
   q_a: Q&A
 
+  comment:
+    name: Question comments
+    add: Add
+
+  reward:
+    public: Public amount
+    set_amount: Set reward amount
+    custom_amount: Custom amount
+    input_amount: Input amount
+    rule: Reward rule
+    success: Reward success
+
   topic:
     name: Topic
     detail: Topic detail
@@ -571,10 +583,12 @@ question:
     detail: Answer detail
     add: Add answer
     view: View answer
+    adoption_answer: Adoption answer
+    adoption_success: Adoption success
     count: '{0} answers'
     invite: ['Invited Reward', 'Set Reward', 'Unset Reward']
     sort: ['time', 'default']
-    adoption: Adopted
+    adoption: ['Adopt', 'Adopted']
     invited: Invited
     look:
       already: Overlooking
@@ -595,21 +609,29 @@ message:
     empty: No system notification
 
     reward_user: '{user} rewards you'
-    reward_feed: '{user} rewards your feed'
-    reward_news: '{user} reward your news "{news}" {amount}'
-    reward_post: 'Your post "{post}" was rewarded by {user}'
-    group_join: ['Agree to user {user} to join the group "{group}"', 'Reject users to join the group "{group}"']
     certificate: ['The identity you applied for has passed', 'The identity you applied for has been rejected']
+
+    reward_feed: '{user} rewards your feed'
+    pinned_feed_by_admin: 'The administrator has pinned your feeds'
+    pinned_feed_comment: ['Agree to the feed comment on "{comment}" top request', 'Reject the feed comment "{comment}" top request']
+
+    reward_news: '{user} rewards your news "{news}" {amount}'
+    pinned_news_comment: ['Agree to the news "{news}"" comment "{comment}"', 'Reject to the news "{news}" comment "{comment}"']
+
     qa_adopt: 'The answer you submitted "{answer}" was adopted'
     reward_qa: '{user} rewards your answer'
     qa_invitation: '{user} invites you to answer the question "{question}"'
     qa_topic_passed: 'Your question topic "{topic}" application was passed'
     qa_topic_reject: 'Your question topic "{topic}" application was rejected'
-    pinned_feed_comment: ['Agree to the feed comment on "{comment}" top request', 'Reject the feed comment "{comment}" top request']
-    pinned_news_comment: ['Agree to the news "{news}"" comment "{comment}"', 'Reject to the news "{news}" comment "{comment}"']
+    qa_excellent: ['Your question "{question}" has been selected']
+
+    group_join: ['Agree to user {user} to join the group "{group}"', 'Reject users to join the group "{group}"']
+    reward_post: '{user} rewards your post "{post}"'
     pinned_post_comment: ['Agree to post "{post}" comment pin request', 'reject post "{post}" comment pin request']
     pinned_post: ['Agree to the top request for the post "{post}"', 'Reject the top request for the post "{post}"']
     pinned_post_by_admin: 'Your post "{post}" has been placed on top of the admin'
+
+    report: 'The content you reported has been processed by the platform.'
 
   comment:
     name: Comments
@@ -650,14 +672,14 @@ message:
 rank:
   name: Ranking list
   user: User
-  balance: Wealth leader list
-  checkin: Check-in ranking list
+  balance: Wealth leader ranking
+  checkin: Check-in ranking
   checkin_count: 'Cumulative check-in: {0}'
-  expert: Q&A leader list
+  expert: Q&A expert ranking
   fans: Fans rankings
   fans_count: "Fans: {0}"
   income: Revenue leader ranking
-  question_like: Q&A like ranking
+  question_like: Q&A leader ranking
   question_like_count: 'like: {0}'
   feed: 'Feed ranking {0}'
   feed_count: 'like: {0}'
