--- a/resources/spa/src/locales/en.yml
+++ b/resources/spa/src/locales/en.yml
@@ -610,25 +610,28 @@ message:
 
     reward_user: '{user} rewards you'
     certificate: ['The identity you applied for has passed', 'The identity you applied for has been rejected']
+    user_cash: ['Your currency withdrawal request has been passed', 'Your currency withdrawal request was rejected: {reason}']
+
 
     reward_feed: '{user} rewards your feed'
     pinned_feed_by_admin: 'The administrator has pinned your feeds'
-    pinned_feed_comment: ['Agree to the feed comment on "{comment}" top request', 'Reject the feed comment "{comment}" top request']
+    pinned_feed_comment: ['Your feed comment "{comment}" top request was passed ', 'Your feed comment "{comment}" top request was rejected']
 
     reward_news: '{user} rewards your news "{news}" {amount}'
-    pinned_news_comment: ['Agree to the news "{news}"" comment "{comment}"', 'Reject to the news "{news}" comment "{comment}"']
+    pinned_news_comment: ['Your request for comment on the "{news}" comment "{comment}" was passed', 'Your request for the comment on the "{news}" comment "{comment}" was rejected.']
 
     qa_adopt: 'The answer you submitted "{answer}" was adopted'
     reward_qa: '{user} rewards your answer'
     qa_invitation: '{user} invites you to answer the question "{question}"'
     qa_topic_passed: 'Your question topic "{topic}" application was passed'
     qa_topic_reject: 'Your question topic "{topic}" application was rejected'
-    qa_excellent: ['Your question "{question}" has been selected']
+    qa_excellent: ['Your question "{question}"" has been selected by the application', 'You have been rejected for applying for the selected question "{question}"']
 
     group_join: ['Agree to user {user} to join the group "{group}"', 'Reject users to join the group "{group}"']
+    group_transform: '{user} has transferred the group "{group}" to you'
     reward_post: '{user} rewards your post "{post}"'
-    pinned_post_comment: ['Agree to post "{post}" comment pin request', 'reject post "{post}" comment pin request']
-    pinned_post: ['Agree to the top request for the post "{post}"', 'Reject the top request for the post "{post}"']
+    pinned_post_comment: ['Your post "{post}" comment pin request was passed', 'Your post "{post}" comment pinned request rejected']
+    pinned_post: ['Your post "{post}" top request was passed', 'Your post "{post}" top request was rejected']
     pinned_post_by_admin: 'Your post "{post}" has been placed on top of the admin'
 
     report: 'The content you reported has been processed by the platform.'
