--- a/resources/spa/src/locales/en.yml
+++ b/resources/spa/src/locales/en.yml
@@ -634,6 +634,8 @@ message:
     pinned_post_comment: ['Your post "{post}" comment pin request was passed', 'Your post "{post}" comment pinned request rejected']
     pinned_post: ['Your post "{post}" top request was passed', 'Your post "{post}" top request was rejected']
     pinned_post_by_admin: 'Your post "{post}" has been placed on top of the admin'
+    report_post: '{user} reported the post "{post}" in your group "{group}"'
+    report_post_comment: '{user} reported the comment "{comment}" under your post "{post}"'
 
     report: 'The content you reported has been processed by the platform.'
 
